fadeInOnScroll for BillboardTeaser heading, text and ctas; fix center alignment for cta buttons

--- a/site/src/documents/pages/blocks/BillboardTeaserBlock.module.scss
+++ b/site/src/documents/pages/blocks/BillboardTeaserBlock.module.scss
@@ -41,6 +41,13 @@
     }
 }
 
+.callToActionWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
 .imageMobile {
     @media (min-width: $breakpoint-sm) {
         display: none;
